background scales with browser size, testing on mobile. removed negative navbar margins trying to fix overlapping navbar buttons

--- a/styles/basic-element.css
+++ b/styles/basic-element.css
@@ -7,7 +7,8 @@
 */
  
 html, body {
-	margin: 0px;
+	margin: 0;
+	padding: 0;
 	height: 100%;
 }
 
@@ -15,6 +16,17 @@ body {
 	font-family: courier;
 	color: #1a1a1a;
 	background-color: #e6e6e6;
+}
+
+.background {
+	width: 100%;
+	height: 100%;
+	max-height: 100%;
+	margin: 0;
+	padding: 0;
+	background-size:100% 100%;
+	background-repeat: no-repeat;
+	color: white;
 }
 
 main {
